--- a/index.html
+++ b/index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>My Personal Site</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My Personal Site</title>
-</head>
-
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/haris.png" alt="" height="150" width="150"></td>
-      <td>
-        <h1>Haris Baig</h1>
-        <p><em>Studying at <strong><a href="https://www.ue.edu.pk/">University Of Education</a></strong></em></p>
-        <p>I am a beginner Web Developer and I enjoy using HTML </p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Winsome Radical School</li>
-    <li>Aspire Group Of colleges</li>
-    <li>University of Education</li>
+  <body>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="images/haris.png" alt="" height="150" width="150" /></td>
+        <td>
+          <h1>Haris Baig</h1>
+          <p>
+            <em
+              >Studying at
+              <strong
+                ><a href="https://www.ue.edu.pk/"
+                  >University Of Education</a
+                ></strong
+              ></em
+            >
+          </p>
+          <p>I am a beginner Web Developer and I enjoy using HTML</p>
+        </td>
+      </tr>
+    </table>
+    <hr />
+    <h3>Education</h3>
     <ul>
-      <hr>
+      <li>Winsome Radical School</li>
+      <li>Aspire Group Of colleges</li>
+      <li>University of Education</li>
+    </ul>
+    <hr>
       <h3>Work Experience</h3>
       <table cellspacing="10">
         <thead>
@@ -67,6 +75,5 @@
       <a href="hobbies.html">My Hobbies</a>
       <br>
       <a href="my contact.html">Contact</a>
-</body>
-
+  </body>
 </html>
